--- a/styles/style.css
+++ b/styles/style.css
@@ -1,19 +1,3 @@
-/*
-* id > hover > class
-*/
-
-h2:hover {
-  color: red;
-}
-
-.subtitle {
-  color: blue;
-}
-
-#about-me {
-  color: green;
-}
-
 /*Every anchor tag that follows h1*/
 h1 + a {
   color: green;
@@ -32,4 +16,13 @@ ul > li {
 /*Descendent selector - Doesnt need to be direct child*/
 ul li {
   color: green;
+}
+
+/*  
+    ^ means path starts with and 
+    $ means path ends with and 
+    * means anywhere  
+*/
+img[src^="img/"] {
+  border: 10px solid black;
 }
