--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 body {
+  background: rgba(10, 89, 6, 0.5);
 }
 
 #title,
@@ -18,5 +19,22 @@ body {
 
   /* cover fits the image just right so that it fits the div size 400px 99%*/
   /* contain resizes without messing with the proportion i.e. diagonaol elongation*/
+  background-size: cover;
+}
+
+#linear-gradient-check {
+  height: 400px;
+  width: 99%;
+  background: linear-gradient(
+    to top right,
+    rgb(50, 50, 203),
+    rgba(117, 117, 146, 0.4)
+  );
+}
+
+#radial-gradient-check {
+  height: 400px;
+  width: 99%;
+  background: radial-gradient(circle, red 20%, blue 30%);
   background-size: cover;
 }
